--- a/index.html
+++ b/index.html
@@ -3,12 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>DBZ Word Guess</title>
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <!-- favicon downloaded from https://www.favicon.cc/?action=icon&file_id=357263 -->
+    <link href="assets/favicon/favicon.ico" rel="icon" type="image/x-icon" />
 </head>
 <body>
-    
+    <div class="content">
+        <h1>
+            <div class="dragon">
+                Dragon
+            </div> 
+            <div class="ball-z">
+                Ball Z
+            </div> Word Guess Game</h1>
+
+
+
+
+
+    </div>
 
 
 
