add content to index.html, style content on style.css, add images to images folder, add images to index.html, style images on style.css.

--- a/index.html
+++ b/index.html
@@ -10,18 +10,65 @@
     <link href="assets/favicon/favicon.ico" rel="icon" type="image/x-icon" />
 </head>
 <body>
-    <div class="content">
+    <header class="header blackTextBorder">
         <h1>
             <div class="dragon">
                 Dragon
             </div> 
             <div class="ball-z">
                 Ball Z
-            </div> Word Guess Game</h1>
+            </div>
+        </h1>
+        <h1 class="doubleLineHeight textColorBlue">
+            Word Guess Game
+        </h1>
+    </header>
+
+    <div class="content doubleLineHeight textColorBlue">
+
+
+        <h2 class="doubleLineHeight">Press any key to start!</h2>
+        <h2 class="doubleLineHeight">Wins</h2>
+        <div class="numberOfWins">
+            <h2 class="wins doubleLineHeight">0</h2>
+        </div>
+        <h2 class="doubleLineHeight">Current Word</h2>
+        <div class="currentWord">
+            <ul class="myWord">
+                <li class="guess">_</li>
+                <li class="guess">_</li>
+                <li class="guess">_</li>
+                <li class="guess">_</li>
+                <li class="guess">_</li>
+                <li class="guess">_</li>
+                <li class="guess">_</li>
+                <li class="guess">_</li>
+            </ul>
+        </div>
+        <h2 class="doubleLineHeight">Letters Already Guessed</h2>
+        <div class="lettersGuessed">
+            <h2 class="doubleLineHeight"> </h2>
+        </div>
 
 
 
 
+        <!-- dragon ball images downloaded from https://www.pngguru.com/ -->
+        <div class="dragonBall-images">
+            <div class="topRow">
+            <img class="oneStarBall smSquareImage" src="assets/images/1starBall.png" alt="One star ball">
+            <img class="twoStarBall smSquareImage" src="assets/images/2starBall.png" alt="One star ball">
+            </div>
+            <div class="middleRow">
+            <img class="threeStarBall smSquareImage" src="assets/images/3starBall.png" alt="One star ball">
+            <img class="fourStarBall smSquareImage" src="assets/images/4starBall.png" alt="One star ball">
+            <img class="fiveStarBall smSquareImage" src="assets/images/5starBall.png" alt="One star ball">
+            </div>
+            <div class="bottomRow">
+            <img class="sixStarBall smSquareImage" src="assets/images/6starBall.png" alt="One star ball">
+            <img class="sevenStarBall smSquareImage" src="assets/images/7starBall.png" alt="One star ball">
+            </div>
+        </div>
 
     </div>
 
