Add first const to game.js, add event listener.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <h2 class="doubleLineHeight">Current Word</h2>
         <div class="currentWord">
             <ul class="myWord">
-                <li class="guess">_</li>
+                <li class="guess" id="firstLetter">_</li>
                 <li class="guess">_</li>
                 <li class="guess">_</li>
                 <li class="guess">_</li>
