add dom manipulations to game.js, letters appear as either correct or incorrect in index.html

--- a/index.html
+++ b/index.html
@@ -34,20 +34,13 @@
         </div>
         <h2 class="doubleLineHeight">Current Word</h2>
         <div class="currentWord">
-            <ul class="myWord">
-                <li class="guess" id="firstLetter">_</li>
-                <li class="guess">_</li>
-                <li class="guess">_</li>
-                <li class="guess">_</li>
-                <li class="guess">_</li>
-                <li class="guess">_</li>
-                <li class="guess">_</li>
-                <li class="guess">_</li>
-            </ul>
+            <h2 class="doubleLineHeight" id="myWord">
+
+            </h2>
         </div>
         <h2 class="doubleLineHeight">Letters Already Guessed</h2>
         <div class="lettersGuessed">
-            <h2 class="doubleLineHeight"> </h2>
+            <h2 class="doubleLineHeight" id="wrongGuess"></h2>
         </div>
 
 
