add dragonBallImages array and dissapearing dragonballs when wrong guess is made to game.js

--- a/index.html
+++ b/index.html
@@ -49,17 +49,17 @@
         <!-- dragon ball images downloaded from https://www.pngguru.com/ -->
         <div class="dragonBall-images">
             <div class="topRow">
-            <img class="oneStarBall smSquareImage" src="assets/images/1starBall.png" alt="One star ball">
-            <img class="twoStarBall smSquareImage" src="assets/images/2starBall.png" alt="One star ball">
+            <img class=" smSquareImage" id="oneStarBall" src="assets/images/1starBall.png" alt="One star ball">
+            <img class=" smSquareImage" id="twoStarBall" src="assets/images/2starBall.png" alt="One star ball">
             </div>
             <div class="middleRow">
-            <img class="threeStarBall smSquareImage" src="assets/images/3starBall.png" alt="One star ball">
-            <img class="fourStarBall smSquareImage" src="assets/images/4starBall.png" alt="One star ball">
-            <img class="fiveStarBall smSquareImage" src="assets/images/5starBall.png" alt="One star ball">
+            <img class=" smSquareImage" id="threeStarBall" src="assets/images/3starBall.png" alt="One star ball">
+            <img class=" smSquareImage" id="fourStarBall" src="assets/images/4starBall.png" alt="One star ball">
+            <img class=" smSquareImage" id="fiveStarBall" src="assets/images/5starBall.png" alt="One star ball">
             </div>
             <div class="bottomRow">
-            <img class="sixStarBall smSquareImage" src="assets/images/6starBall.png" alt="One star ball">
-            <img class="sevenStarBall smSquareImage" src="assets/images/7starBall.png" alt="One star ball">
+            <img class=" smSquareImage" id="sixStarBall" src="assets/images/6starBall.png" alt="One star ball">
+            <img class=" smSquareImage" id="sevenStarBall" src="assets/images/7starBall.png" alt="One star ball">
             </div>
         </div>
 
