add innerHTML for number of wins.

--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
     <div class="content doubleLineHeight textColorBlue">
 
 
+        
         <h2 class="doubleLineHeight">Press any key to start!</h2>
         <h2 class="doubleLineHeight">Wins</h2>
         <div class="numberOfWins">
-            <h2 class="wins doubleLineHeight">0</h2>
+            <h2 class="wins doubleLineHeight" id="wins">0</h2>
         </div>
         <h2 class="doubleLineHeight">Current Word</h2>
         <div class="currentWord">
