fix for loop which removes dragon balls 1 per incorrect guess. Set up messages to user when they win or lose.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
         <div class="lettersGuessed">
             <h2 class="doubleLineHeight" id="wrongGuess"></h2>
         </div>
-
+        <div class="messageToUser">
+            <h2 id="message"></h2>
+        </div>
 
 
 
