--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <h2 class="doubleLineHeight" id="wrongGuess"></h2>
         </div>
         <div class="messageToUser">
-            <h2 id="message"></h2>
+            <h2 class="doubleLineHeight" id="message"></h2>
         </div>
 
 
