update style to fit entire game on one page full screen, responsive to smaller viewports.

--- a/index.html
+++ b/index.html
@@ -24,46 +24,46 @@
         </h1>
     </header>
 
-    <div class="content doubleLineHeight textColorBlue">
+    <div class="content textColorBlue">
 
 
         
-        <h2 class="doubleLineHeight">Press any key to start!</h2>
-        <h2 class="doubleLineHeight">Wins</h2>
+      
+        <h2 class="">Wins</h2>
         <div class="numberOfWins">
             <h2 class="wins doubleLineHeight" id="wins">0</h2>
         </div>
-        <h2 class="doubleLineHeight">Current Word</h2>
+        <h2 class="">Current Word</h2>
         <div class="currentWord">
             <h2 class="doubleLineHeight" id="myWord">
 
             </h2>
         </div>
-        <h2 class="doubleLineHeight">Letters Already Guessed</h2>
+        <h2 class="doubleLineHeight">Wrong Guesses</h2>
         <div class="lettersGuessed">
             <h2 class="doubleLineHeight" id="wrongGuess"></h2>
         </div>
         <div class="messageToUser">
-            <h2 class="doubleLineHeight" id="message"></h2>
+            <h2 class="doubleLineHeight textColorRed" id="message">Press any key to start!</h2>
         </div>
 
 
 
         <!-- dragon ball images downloaded from https://www.pngguru.com/ -->
         <div class="dragonBall-images">
-            <div class="topRow">
+            <!-- <div class="topRow"> -->
             <img class=" smSquareImage" id="oneStarBall" src="assets/images/1starBall.png" alt="One star ball">
             <img class=" smSquareImage" id="twoStarBall" src="assets/images/2starBall.png" alt="One star ball">
-            </div>
-            <div class="middleRow">
+            <!-- </div> -->
+            <!-- <div class="middleRow"> -->
             <img class=" smSquareImage" id="threeStarBall" src="assets/images/3starBall.png" alt="One star ball">
             <img class=" smSquareImage" id="fourStarBall" src="assets/images/4starBall.png" alt="One star ball">
             <img class=" smSquareImage" id="fiveStarBall" src="assets/images/5starBall.png" alt="One star ball">
-            </div>
-            <div class="bottomRow">
+            <!-- </div> -->
+            <!-- <div class="bottomRow"> -->
             <img class=" smSquareImage" id="sixStarBall" src="assets/images/6starBall.png" alt="One star ball">
             <img class=" smSquareImage" id="sevenStarBall" src="assets/images/7starBall.png" alt="One star ball">
-            </div>
+            <!-- </div> -->
         </div>
 
     </div>
